# chat2graph

./: .env.template  .gitignore  CODE_OF_CONDUCT.md  CONTRIBUTING.md  README.md  pull_request_template.md  pyproject.toml
.github/: pull_request_template.md
app/: server.py
app/agent/: agent.py  builtin_leader_state.py  expert.py  graph.py  job.py  job_result.py  leader.py  leader_state.py  task.py
app/agent/core/: session.py
app/agent/graph_agent/: data_importation.py  graph_analysis.py  graph_modeling.py  graph_query.py  leader_config.py  question_answering.py
app/agent/reasoner/: dual_llm.py  dual_model_reasoner.py  model_service.py  model_service_factory.py  mono_model_reasoner.py  reasoner.py  task.py
app/agent/workflow/: workflow.py
app/api/: __init__.py  message_api.py  session_api.py
app/commom/: prompt.py  system_env.py  type.py
app/commom/prompt/: agent.py  model_service.py  operator.py  reasoner.py
app/common/: decorator.py  singleton.py  system_env.py  util.py
app/common/prompt/: agent.py  operator.py
app/config/: sqilte_config.py
app/core/agent/: agent.py  builtin_leader_state.py  expert.py  leader.py  leader_state.py
app/core/common/: async_func.py  decorator.py  system_env.py  type.py  util.py
app/core/dal/: dao.py  database.py  drop_db.py  init_db.py
app/core/env/: env.py
app/core/graph_db/: graph_db.py  graph_db_config.py  graph_db_factory.py
app/core/knowledge/: knowledge_config.py  knowledge_store.py  knowledge_store_factory.py
app/core/memory/: reasoner_memory.py
app/core/model/: agentic_config.py  artifact.py  file_descriptor.py  graph.py  graph_db.py  graph_db_config.py  grpah.py  job.py  job_graph.py  job_result.py  knowledge.py  knowledge_base.py  message.py  session.py  sql_model.py  task.py
app/core/prompt/: agent.py  eval_operator.py  job.py  job_decomposition.py  knowledge.py  model_service.py  operator.py  reasoner.py
app/core/reasoner/: dual_model_reasoner.py  injection_mapping.py  model_config.py  model_service.py  model_service_factory.py  mono_model_reasoner.py  reasoner.py
app/core/resource/: data_importation.py  graph_analysis.py  graph_modeling.py
app/core/sdk/: agentic_service.py  chat2graph.yml
app/core/service/: agent_service.py  artifact_service.py  file_service.py  graph_db_service.py  job_service.py  knowledge_base_service.py  message_service.py  reasoner_service.py  service_factory.py  session_service.py  tool_connection_service.py  toolkit_service.py
app/core/toolkit/: action.py  mcp_connection.py  mcp_service.py  mcp_tool.py  tool.py  tool_config.py  tool_connection.py  tool_connection_factory.py  tool_group.py  toolkit.py
app/core/workflow/: eval_operator.py  operator.py  operator_config.py  workflow.py
app/env/: env.py
app/env/insight/: insight.py  insight_service.py
app/knowledge/resource/: doc.py
app/knowledge_base/: knowledge_base.py  knowlege_base_factory.py
app/memory/: memory.py  message.py  reasoner_memory.py
app/plugin/aisuite/: aisuite_llm_client.py
app/plugin/dbgpt/: dbgpt_knowledge_store.py  dbgpt_llm_client.py  dbgpt_map_operator.py  dbgpt_workflow.py
app/plugin/lite_llm/: lite_llm_client.py
app/plugin/mcp/: file_system_mcp.md  playwright_mcp.md
app/plugin/neo4j/: graph_db.py  graph_store.py  neo4j_store.py
app/plugin/sqlite/: sqlite_model.py
app/plugin/tugraph/: graph_db.py  tugraph_db.py  (+1 more)
app/server/: bootstrap.py
app/service/: agent_service.py  agentic_service.py  job_service.py  message_service.py  session_service.py
app/toolkit/: toolkit.py
doc/: CONTRIBUTING.md  README-cn.md  chat2graph-user-manual-cn.md  chat2graph-user-manual.md
doc/chat/: chat-cn.md  chat.md
doc/cn/: README-cn.md  user-manual.md
doc/en/: user-manual.md
doc/en-us/: introduction.md  meta.json  quickstart.md
doc/graph_db/: graph-db-cn.md  graph-db.md
doc/knowledge/: knowledge-base-cn.md  knowledge-base.md
doc/web/: .gitignore  README.md  middleware.ts  next.config.mjs  package.json  source.config.ts  tsconfig.json
doc/zh-cn/: introduction.md  meta.json  quickstart.md  readme.md
example/: run_data_importation.py  run_eval_operator.py  run_function_calling.py  run_graph_analysis.py  run_graph_modeling.py  run_graph_query.py  run_job_decomposition.py  run_model_service.py  run_mono_reasoner_with_func_calling.py  run_operator.py  run_question_answering.py  run_reasoner.py  run_reasoner_with_func_calling.py  run_reasoner_without_func_calling.py  run_toolkit.py  run_tugraph.py  run_workflow.py
example/agentic_service/: run_agentic_async_service.py  run_agentic_sync_service.py
example/graph_agent/: run_data_importation.py  run_graph_analysis.py  run_graph_modeling.py  run_graph_query.py  run_question_answering.py
example/leader/: run_leader_v1.py  run_leader_v2.py
test/example/: run_dual_reasoner_with_func_calling.py  run_eval_operator.py  run_function_calling.py  run_graph_db.py  run_job_decomposition.py  run_model_service.py  run_mono_reasoner_with_func_calling.py  run_neo4j.py  run_operator.py  run_reasoner_with_func_calling.py  run_reasoner_without_func_calling.py  run_toolkit.py  run_workflow.py
test/resource/: init_server.py  tool_resource.py
test/unit/: test_artifact_increment.py  test_dual_model_reasoner.py  test_dual_reasoner.py  test_eval_operator.py  test_job_decomposition.py  test_knowledge_base.py  test_leader_execution.py  test_mcp_connection.py  test_model_service.py  test_mono_model_reasoner.py  test_operator.py  test_system_env.py  test_task_decomposition.py  test_toolkit.py  test_util.py  test_util_json_parsing.py  test_workflow.py
test/ut/: test_dual_model_reasoner.py  test_dual_reasoner.py  test_eval_operator.py  test_leader_execution.py  test_model_service.py  test_mono_model_reasoner.py  test_mono_reasoner.py  test_operator.py  test_reasoner.py  test_system_env.py  test_task_decomposition.py  test_toolkit.py  test_workflow.py
web/: .umirc.ts  index.html  package-lock.json  package.json  readme.md  vite.config.ts
web/src/: App.vue  global.less
(+255 files in other folders)
